# stock-management-system

./: .gitignore  README.md
backend/: Dockerfile  README.md  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: ad86db60f997_create_tables.py
backend/api/v1/router/: accounts.py  orders.py  products.py  users.py
backend/config/: setting.py
backend/controller/: accounts.py  auth.py  orders.py  products.py  users.py
backend/core/: build.py  setup.py  start.py
backend/handlers/: exceptions.py
backend/images/product_images/product-picture/3/0/: 3.898x450.jpe
backend/images/user_images/user-picture/1/0/: 1.480x319.jpe
backend/images/user_images/user-picture/4/0/: 4.646x761.jpe
backend/models/: account.py  order.py  product.py  users.py
backend/plugins/: email.py
backend/schemas/: accounts.py  enums.py  error.py  orders.py  products.py  users.py
backend/templates/: activated.html  email.html
backend/utils/: session.py  sql.py
frontend/: next.config.js  package-lock.json  package.json
frontend/src/app/: layout.js  modal.module.css  page.js  page.module.css
frontend/src/app/api/login/: route.js
frontend/src/app/api/logout/: route.js
frontend/src/app/api/order/: route.js
frontend/src/app/api/products/: route.js
frontend/src/app/api/refresh/: route.js
frontend/src/app/components/: header.js  products.js  search.js
frontend/src/app/modal/: index.js  order.js  product.js  profile.js  utils.js
frontend/src/app/reports/: page.js
frontend/src/app/utils/: constants.js  index.js
(+7 files in other folders)
