[tool.poetry]
name = "stock-managment-system"
version = "0.1.0"
description = ""
authors = ["Kingsley Ocran <ocrankingsleygmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.99.1"
sqlalchemy = "^2.0.18"
sqlalchemy-imageattach = "^1.1.0"
python-multipart = "^0.0.6"
flask = "^2.3.2"
fastapi-jwt-auth = "^0.5.0"
fastapi-mail = "^1.3.1"
jinja2 = "^3.1.2"


[tool.poetry.group.dev.dependencies]
alembic = "^1.11.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
